# sollist

./: .python-version  LICENSE  README.md  app.py  config.yml  pyproject.toml  test.py
utils/: column_processing.py  computing.py  load_data.py
